@@ -69,12 +69,12 @@ def remove_parent_from_family(db, person_handle, family_handle, trans=None):
     elif family.get_mother_handle() == person_handle:
         family.set_mother_handle(None)
 
-    child_list = family.get_child_handle_list()
+    child_list = family.get_child_ref_list()
     if (not family.get_father_handle() and not family.get_mother_handle() and
         len(child_list) <= 1):
         db.remove_family(family_handle, trans)
         if child_list:
-            child = db.get_person_from_handle(child_list[0])
+            child = db.get_person_from_handle(child_list[0].ref)
             child.remove_parent_family_handle(family_handle)
             db.commit_person(child, trans)
         msg = _("Remove father from family")
@@ -102,12 +102,12 @@ def remove_child_from_family(db, person_handle, family_handle, trans=None):
     else:
         need_commit = False
         
-    child_list = family.get_child_handle_list()
+    child_list = family.get_child_ref_list()
     if (not family.get_father_handle() and not family.get_mother_handle() and
         len(child_list) <= 1):
         db.remove_family(family_handle, trans)
         if child_list:
-            child = db.get_person_from_handle(child_list[0])
+            child = db.get_person_from_handle(child_list[0].ref)
             child.remove_parent_family_handle(family_handle)
             db.commit_person(child, trans)
     else:
